--- a/periodic/periodic.vcxproj
+++ b/periodic/periodic.vcxproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ClCompile Include="assets.gen.cpp" />
     <ClCompile Include="coders_crux.gen.cpp" />
+    <ClCompile Include="element.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -25,6 +26,8 @@
   <ItemGroup>
     <ClInclude Include="assets.gen.h" />
     <ClInclude Include="coders_crux.gen.h" />
+    <ClInclude Include="element.h" />
+    <ClInclude Include="periodic.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{16888AC4-0062-4D0B-81C9-B35063AFFE40}</ProjectGuid>
