Offloaded rendering stuff into new class ElementCube. Added reacting cubes with eachother (currently only appears in logs.) See details for more.
Also:
* 'new' operator not being available on Sifteo Cubes. (Might implement a resource pool allocator later...)
* numOuterElectrons not being set or copied in Element.
* bool result to Element::ReactWith for optimization purposes in ElementCube.
* Cleaned up main a lot.

--- a/periodic/periodic.vcxproj
+++ b/periodic/periodic.vcxproj
@@ -17,8 +17,10 @@
   <ItemGroup>
     <ClCompile Include="assets.gen.cpp" />
     <ClCompile Include="coders_crux.gen.cpp" />
-    <ClCompile Include="element.cpp" />
+    <ClCompile Include="Element.cpp" />
+    <ClCompile Include="ElementCube.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="periodic.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.png" />
@@ -26,7 +28,8 @@
   <ItemGroup>
     <ClInclude Include="assets.gen.h" />
     <ClInclude Include="coders_crux.gen.h" />
-    <ClInclude Include="element.h" />
+    <ClInclude Include="Element.h" />
+    <ClInclude Include="ElementCube.h" />
     <ClInclude Include="periodic.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
