--- a/periodic/periodic.vcxproj.filters
+++ b/periodic/periodic.vcxproj.filters
@@ -12,7 +12,9 @@
     <ClCompile Include="coders_crux.gen.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
-    <ClCompile Include="element.cpp" />
+    <ClCompile Include="ElementCube.cpp" />
+    <ClCompile Include="Element.cpp" />
+    <ClCompile Include="periodic.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.png" />
@@ -24,8 +26,9 @@
     <ClInclude Include="coders_crux.gen.h">
       <Filter>Generated</Filter>
     </ClInclude>
-    <ClInclude Include="element.h" />
     <ClInclude Include="periodic.h" />
+    <ClInclude Include="ElementCube.h" />
+    <ClInclude Include="Element.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Generated">
