--- a/periodic-tests/periodic-tests.vcxproj
+++ b/periodic-tests/periodic-tests.vcxproj
@@ -16,6 +16,7 @@
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="TestStep_Bonds.cpp" />
     <ClCompile Include="TestStep_ElementBasic.cpp" />
+    <ClCompile Include="TestStep_ObjectPool.cpp" />
     <ClCompile Include="TestStep_Strcmp.cpp" />
   </ItemGroup>
   <ItemGroup>
