--- a/periodic/periodic.vcxproj.filters
+++ b/periodic/periodic.vcxproj.filters
@@ -31,6 +31,7 @@
     <ClInclude Include="ElementCube.h" />
     <ClInclude Include="Element.h" />
     <ClInclude Include="number_font.h" />
+    <ClInclude Include="ObjectPool.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Generated">
