--- a/periodic/periodic.vcxproj
+++ b/periodic/periodic.vcxproj
@@ -16,24 +16,30 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="assets.gen.cpp" />
+    <ClCompile Include="Bond.cpp" />
     <ClCompile Include="coders_crux.gen.cpp" />
     <ClCompile Include="Element.cpp" />
+    <ClCompile Include="ElementCollection.cpp" />
     <ClCompile Include="ElementCube.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="number_font.cpp" />
     <ClCompile Include="periodic.cpp" />
+    <ClCompile Include="Reaction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.png" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="assets.gen.h" />
+    <ClInclude Include="Bond.h" />
     <ClInclude Include="coders_crux.gen.h" />
     <ClInclude Include="Element.h" />
+    <ClInclude Include="ElementCollection.h" />
     <ClInclude Include="ElementCube.h" />
     <ClInclude Include="number_font.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="periodic.h" />
+    <ClInclude Include="Reaction.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{16888AC4-0062-4D0B-81C9-B35063AFFE40}</ProjectGuid>
