--- a/periodic/periodic.vcxproj.filters
+++ b/periodic/periodic.vcxproj.filters
@@ -16,9 +16,9 @@
     <ClCompile Include="Element.cpp" />
     <ClCompile Include="periodic.cpp" />
     <ClCompile Include="number_font.cpp" />
-    <ClCompile Include="ElementCollection.cpp" />
     <ClCompile Include="Reaction.cpp" />
     <ClCompile Include="Bond.cpp" />
+    <ClCompile Include="BondSolution.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.png" />
@@ -36,8 +36,9 @@
     <ClInclude Include="number_font.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="Reaction.h" />
-    <ClInclude Include="ElementCollection.h" />
     <ClInclude Include="Bond.h" />
+    <ClInclude Include="BondSolution.h" />
+    <ClInclude Include="Set.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Generated">
