--- a/periodic/periodic.vcxproj
+++ b/periodic/periodic.vcxproj
@@ -19,6 +19,7 @@
     <ClCompile Include="Bond.cpp" />
     <ClCompile Include="BondSolution.cpp" />
     <ClCompile Include="coders_crux.gen.cpp" />
+    <ClCompile Include="Compound.cpp" />
     <ClCompile Include="Element.cpp" />
     <ClCompile Include="ElementCube.cpp" />
     <ClCompile Include="main.cpp" />
@@ -34,7 +35,9 @@
     <ClInclude Include="Bond.h" />
     <ClInclude Include="BondSolution.h" />
     <ClInclude Include="coders_crux.gen.h" />
+    <ClInclude Include="Compound.h" />
     <ClInclude Include="Element.h" />
+    <ClInclude Include="ElementSet.h" />
     <ClInclude Include="Set.h" />
     <ClInclude Include="ElementCube.h" />
     <ClInclude Include="number_font.h" />
