--- a/periodic/periodic.vcxproj.filters
+++ b/periodic/periodic.vcxproj.filters
@@ -19,6 +19,7 @@
     <ClCompile Include="Reaction.cpp" />
     <ClCompile Include="Bond.cpp" />
     <ClCompile Include="BondSolution.cpp" />
+    <ClCompile Include="Compound.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.png" />
@@ -39,6 +40,8 @@
     <ClInclude Include="Bond.h" />
     <ClInclude Include="BondSolution.h" />
     <ClInclude Include="Set.h" />
+    <ClInclude Include="Compound.h" />
+    <ClInclude Include="ElementSet.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Generated">
