Added extra metadata to BondSolution. Translated two-element hydrogen reactions.

--- a/periodic/periodic.vcxproj
+++ b/periodic/periodic.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="number_font.cpp" />
     <ClCompile Include="periodic.cpp" />
     <ClCompile Include="Reaction.cpp" />
+    <ClCompile Include="Reaction.Process.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.png" />
