Made it so the tests build again, can't say much else for them.

--- a/periodic-tests/Makefile
+++ b/periodic-tests/Makefile
@@ -4,9 +4,15 @@ CFLAGS += -I../periodic
 
 include $(SDK_DIR)/Makefile.defs
 
-OBJS = $(ASSETS).gen.o ../periodic/Element.o ../periodic/periodic.o main.o Test.o
+OBJS = $(ASSETS).gen.o main.o Test.o
 ASSETDEPS += *.png $(ASSETS).lua
 ASSETS_BUILD_PROOF := yes
+
+# Files needed for testing
+OBJS += ../periodic/Element.o
+OBJS += ../periodic/periodic.o
+OBJS += ../periodic/Bond.o
+OBJS += ../periodic/BondSolution.o
 
 # Test steps
 OBJS += TestStep_ElementBasic.o
