--- a/periodic/periodic.vcxproj.filters
+++ b/periodic/periodic.vcxproj.filters
@@ -21,8 +21,8 @@
     <ClCompile Include="BondSolution.cpp" />
     <ClCompile Include="Compound.cpp" />
     <ClCompile Include="Reaction.Process.cpp" />
-    <ClCompile Include="..\..\..\..\SeniorProject\Trie.cpp" />
-    <ClCompile Include="..\..\..\..\SeniorProject\Node.cpp" />
+    <ClCompile Include="Node.cpp" />
+    <ClCompile Include="Trie.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon.png" />
@@ -45,8 +45,8 @@
     <ClInclude Include="Set.h" />
     <ClInclude Include="Compound.h" />
     <ClInclude Include="ElementSet.h" />
-    <ClInclude Include="..\..\..\..\SeniorProject\Trie.h" />
-    <ClInclude Include="..\..\..\..\SeniorProject\Node.h" />
+    <ClInclude Include="Node.h" />
+    <ClInclude Include="Trie.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Generated">
