Added colliding cubes together.

--- a/PeriodicAppCore/PeriodicAppCore.csproj
+++ b/PeriodicAppCore/PeriodicAppCore.csproj
@@ -34,6 +34,9 @@
   <PropertyGroup>
     <StartupObject />
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
