Minor tweaks to make distributing the stand-alone app prototype easier.

--- a/periodic/periodic.vcxproj
+++ b/periodic/periodic.vcxproj
@@ -152,6 +152,7 @@ $(SDK_DIR)bin\make RELEASE=1</NMakeReBuildCommandLine>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <PreprocessorDefinitions>STANDALONE_APP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
